<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ватман</string>
    <string name="type_trolley">Тролей</string>
    <string name="type_tramvai">Трамвай</string>
    <string name="type_bus">Автобус</string>
    <string name="stop">Спирка</string>
    <string name="download">Изтегляне&#8230;</string>
    <string name="initialize">Инициализиране на спирките&#8230;</string>
    <string name="invalid_response">Няма налична информация в момента. Опитайте
		по-късно.</string>
    <string name="schedule_is_empty">Няма налична информация. </string>
    <string name="invalid_xml_response">Получено е невалидно разписание. Моля опитайте пак.</string>
    <string name="connection_failed">Липсва интернет връзка. Разписанието не може да
		бъде изтеглено.</string>
    <string name="service_not_available">Услугата не е достъпна в момента. Опитайте
		по-късно.</string>
    <string name="access_denied">Нямате нужните права за достъп.</string>
    <string name="login_name">Включване</string>
    <string name="app_major_version">1.3</string>
    <string name="app_minor_version">3</string>

    <string-array name="view_modes_text">
        <item>Маршрути</item>
        <item>Линии</item>
        <item>Комбинирано</item>
    </string-array>
    <string-array name="view_modes_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <color name="map_popup_text">#efefef</color>

    <string name="please_wait">Моля изчакайтe&#8230;</string>
    <string name="tram_short">Трам.</string>
    <string name="trol_short">Трол.</string>
    <string name="bus_short">Авт.</string>
    <string name="description_modes_button">Изгледи</string>
    <string name="description_arrow_next_stop">Следваща спирка</string>
    <string name="description_arrow_prev_stop">Предишна спика</string>
    <string name="description_go_to_my_location">Покажи моето местоположение</string>
    <string name="description_vatman_logo">Ватман</string>
    <string name="description_heading">Посока към спирката</string>
    <string name="description_fav_button">Добави в любими</string>

    <string name="actionFilter">Филтриране</string>
    <string name="actionFavouriteOn">Добави любима спирка</string>
    <string name="actionFavouriteOff">Премахни любима спирка</string>
    <string name="actionRefresh">Обнови</string>
    <string name="actionMap">Карта</string>
    <string name="actionPreferences">Настройки</string>
    <string name="actionAbout">Инфо</string>
    <string name="actionExit">Изход</string>

</resources>