<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_filter_on"
        android:icon="@drawable/ic_action_select_all"
        android:showAsAction="always"
        android:title="@string/actionFilter"
        android:visible="false">
    </item>
    <item
        android:id="@+id/action_favourite_on"
        android:icon="@android:drawable/btn_star_big_on"
        android:showAsAction="always"
        android:title="@string/actionFavouriteOn"
        android:visible="false">
    </item>
    <item
        android:id="@+id/action_favourite_off"
        android:icon="@android:drawable/btn_star_big_off"
        android:showAsAction="always"
        android:title="@string/actionFavouriteOff"
        android:visible="false">
    </item>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/actionRefresh"
        android:visible="false">
    </item>
    <item
        android:id="@+id/options_map_mode"
        android:icon="@android:drawable/ic_menu_mapmode" 
        android:showAsAction="ifRoom"
        android:title="@string/actionMap"/>
    <item
        android:id="@+id/options_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/actionPreferences"/>
    <item
        android:id="@+id/options_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/actionAbout"/>
    <item
        android:id="@+id/options_quit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/actionExit"/>

</menu>